# ppe

./: .gitignore  CMakeLists.txt  README.md
Cpufit/: interface.cpp  lm_fit_cpp.cpp
Cpufit/matlab/: CMakeLists.txt  cpufit.m  cpufit_c.m
Gpufit/: constants.h  info.cpp
Gpufit/matlab/: CMakeLists.txt  ModelID.m  gpufit_c.m
Gpufit/matlab/examples/: gauss2d_plot.m  linear1d.m  planetorays.m  startup.m
Gpufit/models/: models.cuh  planetorays.cuh  rayxpln.h
cpp/: CMakeLists.txt  README.md
cpp/include/: inc_test.h  pcdraw.h  pcextrpln.h  pointCloud.h  ptxread.h
cpp/mex/: pcextrplnc.c
cpp/src/: CMakeLists.txt  inc_test.cpp  matrix_test.cpp  pcd_write.cpp  pcdraw.cpp  pcextrpln.cpp  planeextract.cpp  pointCloud.cpp  ptxread.cpp
data/: cottage_01_head.ptx  test_100.pcd  test_500.pcd
gpufit/: README.md
gpufit/Cpufit/: lm_fit.h
gpufit/Gpufit/: CMakeLists.txt  info.cu  info.h
gpufit/Gpufit/matlab/: gpufit.m
gpufit/Gpufit/matlab/examples/: planetorays.m  startup.m
gpufit/Gpufit/models/: models.cuh  planetorays.cuh
matlab/: extrplnmsac.m  genrayxpln.m  labelaxes.m  pc2comp.m  pcextrpln.m  plotseg.m  synpebstat.m
matlab/experiments/: evalexp.m  gendata.m  investigateresult.m  mergeplnres.m  optparamppe.m  plotcover.m  ploteval.m  plotlmax.m  plotplane.m  plotprob.m  rmatompln.m  runexp.m  segcomp2pcd.m  segcompeval.m  segcompread.m  synpebread.m  synpebstat.m  trainmsac.m  trainppe.m
matlab/result/: paramfeng.mat  parammsac.mat  paramppe.mat
